added css code, and updated html

--- a/resources/style.css
+++ b/resources/style.css
@@ -1,1 +1,48 @@
-body { }
+body {
+    border: 0;
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    width: 100%;
+    text-align: center;
+    color: white;
+    font-family: Verdana;
+}
+
+header {
+    margin-bottom: 1em;
+}
+
+h1 {
+    font-family: Verdana;
+    font-size: 50px;
+    width: 100%;
+    font-weight: normal;
+}
+
+a {
+    color: aquamarine;
+    font-size: 16px;
+}
+
+h2 {
+    font-family: Verdana;
+    font-weight: 300;
+    font-size: 42px;
+}
+
+.image-container {
+    margin-bottom: 1em;
+}
+
+.image-container p {
+    font-family: Verdana;
+    font-size: 21px;
+    color: gray;
+}
+
+footer p {
+    color: gray;
+    text-align: right;
+    padding: 0.5em;
+}
